test/expected/explain_ud.out
explain unsigned double x
        ^
9: error: "unsigned double" is illegal for built-in type
